Enterprise-Architect-Model-Validator/OCLtoSQLTranslator/OCLConstraintParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: null
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR null Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g 2023-05-25 17:11:32

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;

namespace OCLtoSQL
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "null")]
[System.CLSCompliant(false)]
public partial class OCLConstraintParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ATSIGN", "BAR", "COLON", "COMMA", "DCOLON", "DIVIDE", "DOT", "DOTDOT", "EQUAL", "GE", "GT", "LBRACK", "LCURLY", "LE", "LPAREN", "LT", "MINUS", "MULT", "NAME", "NEQUAL", "NUMBER", "PLUS", "POUND", "RARROW", "RBRACK", "RCURLY", "RPAREN", "SEMICOL", "SL_COMMENT", "STRING", "WS", "'and'", "'implies'", "'inv'", "'not'", "'or'"
	};
	public const int EOF=-1;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int ATSIGN=4;
	public const int BAR=5;
	public const int COLON=6;
	public const int COMMA=7;
	public const int DCOLON=8;
	public const int DIVIDE=9;
	public const int DOT=10;
	public const int DOTDOT=11;
	public const int EQUAL=12;
	public const int GE=13;
	public const int GT=14;
	public const int LBRACK=15;
	public const int LCURLY=16;
	public const int LE=17;
	public const int LPAREN=18;
	public const int LT=19;
	public const int MINUS=20;
	public const int MULT=21;
	public const int NAME=22;
	public const int NEQUAL=23;
	public const int NUMBER=24;
	public const int PLUS=25;
	public const int POUND=26;
	public const int RARROW=27;
	public const int RBRACK=28;
	public const int RCURLY=29;
	public const int RPAREN=30;
	public const int SEMICOL=31;
	public const int SL_COMMENT=32;
	public const int STRING=33;
	public const int WS=34;

	public OCLConstraintParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public OCLConstraintParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}

	public override string[] TokenNames { get { return OCLConstraintParser.tokenNames; } }
	public override string GrammarFileName { get { return "Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g"; } }

	 
		//End after first mistake (no recovery)
		protected override object RecoverFromMismatchedToken(IIntStream input, int ttype, BitSet follow) 
		{ 
				throw new MismatchedTokenException(ttype, input); 
		}
		public override object RecoverFromMismatchedSet(IIntStream input, 
		RecognitionException e, BitSet follow) 
		{ 
				throw e; 
		}


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_constraint();
	partial void LeaveRule_constraint();
	// $ANTLR start "constraint"
	// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:35:1: public constraint[DDLPackage ddlPackage, string context] returns [Expression expression] : 'inv' COLON lo= logicalExpression EOF ;
	[GrammarRule("constraint")]
	public Expression constraint(DDLPackage ddlPackage, string context)
	{
		EnterRule_constraint();
		EnterRule("constraint", 1);
		TraceIn("constraint", 1);
		Expression expression = default(Expression);


		Expression lo = default(Expression);


				this.ddlPackage = ddlPackage;
				defaultContext = context;
				tableBindings.Add(new TableBinding("self", context, "SELFT"));
			
		try { DebugEnterRule(GrammarFileName, "constraint");
		DebugLocation(35, 2);
		try
		{
			// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:42:3: ( 'inv' COLON lo= logicalExpression EOF )
			DebugEnterAlt(1);
			// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:42:5: 'inv' COLON lo= logicalExpression EOF
			{
			DebugLocation(42, 5);
			Match(input,37,Follow._37_in_constraint79); if (state.failed) return expression;
			DebugLocation(42, 11);
			Match(input,COLON,Follow._COLON_in_constraint81); if (state.failed) return expression;
			DebugLocation(42, 19);
			PushFollow(Follow._logicalExpression_in_constraint85);
			lo=logicalExpression();
			PopFollow();
			if (state.failed) return expression;
			DebugLocation(42, 38);
			Match(input,EOF,Follow._EOF_in_constraint87); if (state.failed) return expression;
			DebugLocation(42, 42);
			if (state.backtracking == 0)
			{
				expression = lo;
			}

			}

		}
		 
			catch (RecognitionException e) 
			{ 
				throw e; 
			}

		finally
		{
			TraceOut("constraint", 1);
			LeaveRule("constraint", 1);
			LeaveRule_constraint();
		}
		DebugLocation(43, 2);
		} finally { DebugExitRule(GrammarFileName, "constraint"); }
		return expression;

	}
	// $ANTLR end "constraint"

	partial void EnterRule_logicalExpression();
	partial void LeaveRule_logicalExpression();
	// $ANTLR start "logicalExpression"
	// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:45:1: logicalExpression returns [Expression expression] : e1= relationalExpression (op= logicalOperator e2= relationalExpression )* ;
	[GrammarRule("logicalExpression")]
	private Expression logicalExpression()
	{
		EnterRule_logicalExpression();
		EnterRule("logicalExpression", 2);
		TraceIn("logicalExpression", 2);
		Expression expression = default(Expression);


		Expression e1 = default(Expression);
		string op = default(string);
		Expression e2 = default(Expression);

		try { DebugEnterRule(GrammarFileName, "logicalExpression");
		DebugLocation(45, 2);
		try
		{
			// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:46:3: (e1= relationalExpression (op= logicalOperator e2= relationalExpression )* )
			DebugEnterAlt(1);
			// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:46:5: e1= relationalExpression (op= logicalOperator e2= relationalExpression )*
			{
			DebugLocation(46, 7);
			PushFollow(Follow._relationalExpression_in_logicalExpression108);
			e1=relationalExpression();
			PopFollow();
			if (state.failed) return expression;
			DebugLocation(47, 3);
			if (state.backtracking == 0)
			{

							expression = new LogicalExpression(e1);
						
			}
			DebugLocation(50, 5);
			// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:50:5: (op= logicalOperator e2= relationalExpression )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_1 = input.LA(1);

				if (((LA1_1>=35 && LA1_1<=36)||LA1_1==39))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:50:7: op= logicalOperator e2= relationalExpression
					{
					DebugLocation(50, 9);
					PushFollow(Follow._logicalOperator_in_logicalExpression122);
					op=logicalOperator();
					PopFollow();
					if (state.failed) return expression;
					DebugLocation(50, 28);
					PushFollow(Follow._relationalExpression_in_logicalExpression126);
					e2=relationalExpression();
					PopFollow();
					if (state.failed) return expression;
					DebugLocation(51, 3);
					if (state.backtracking == 0)
					{

									((LogicalExpression)expression).Add(op, e2);
								
					}

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

		}
		 
			catch (RecognitionException e) 
			{ 
				throw e; 
			}

		finally
		{
			TraceOut("logicalExpression", 2);
			LeaveRule("logicalExpression", 2);
			LeaveRule_logicalExpression();
		}
		DebugLocation(55, 2);
		} finally { DebugExitRule(GrammarFileName, "logicalExpression"); }
		return expression;

	}
	// $ANTLR end "logicalExpression"

	partial void EnterRule_relationalExpression();
	partial void LeaveRule_relationalExpression();
	// $ANTLR start "relationalExpression"
	// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:57:1: relationalExpression returns [Expression expression] : e1= arithmeticExpression (op= relationalOperator e2= arithmeticExpression )? ;
	[GrammarRule("relationalExpression")]
	private Expression relationalExpression()
	{
		EnterRule_relationalExpression();
		EnterRule("relationalExpression", 3);
		TraceIn("relationalExpression", 3);
		Expression expression = default(Expression);


		Expression e1 = default(Expression);
		string op = default(string);
		Expression e2 = default(Expression);

		try { DebugEnterRule(GrammarFileName, "relationalExpression");
		DebugLocation(57, 2);
		try
		{
			// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:58:3: (e1= arithmeticExpression (op= relationalOperator e2= arithmeticExpression )? )
			DebugEnterAlt(1);
			// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:58:5: e1= arithmeticExpression (op= relationalOperator e2= arithmeticExpression )?
			{
			DebugLocation(58, 7);
			PushFollow(Follow._arithmeticExpression_in_relationalExpression153);
			e1=arithmeticExpression();
			PopFollow();
			if (state.failed) return expression;
			DebugLocation(59, 3);
			if (state.backtracking == 0)
			{

							expression = e1;
						
			}
			DebugLocation(62, 5);
			// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:62:5: (op= relationalOperator e2= arithmeticExpression )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_1 = input.LA(1);

			if (((LA2_1>=EQUAL && LA2_1<=GT)||LA2_1==LE||LA2_1==LT||LA2_1==NEQUAL))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:62:7: op= relationalOperator e2= arithmeticExpression
				{
				DebugLocation(62, 9);
				PushFollow(Follow._relationalOperator_in_relationalExpression167);
				op=relationalOperator();
				PopFollow();
				if (state.failed) return expression;
				DebugLocation(62, 31);
				PushFollow(Follow._arithmeticExpression_in_relationalExpression171);
				e2=arithmeticExpression();
				PopFollow();
				if (state.failed) return expression;
				DebugLocation(63, 3);
				if (state.backtracking == 0)
				{

								expression = new RelationalExpression(e1);
								((RelationalExpression)expression).Add(op, e2);
							
				}

				}
				break;

			}
			} finally { DebugExitSubRule(2); }


			}

		}
		 
			catch (RecognitionException e) 
			{ 
				throw e; 
			}

		finally
		{
			TraceOut("relationalExpression", 3);
			LeaveRule("relationalExpression", 3);
			LeaveRule_relationalExpression();
		}
		DebugLocation(68, 2);
		} finally { DebugExitRule(GrammarFileName, "relationalExpression"); }
		return expression;

	}
	// $ANTLR end "relationalExpression"

	partial void EnterRule_arithmeticExpression();
	partial void LeaveRule_arithmeticExpression();
	// $ANTLR start "arithmeticExpression"
	// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:70:1: arithmeticExpression returns [Expression expression] : e1= unaryExpression (op= arithmeticOperator e2= unaryExpression )* ;
	[GrammarRule("arithmeticExpression")]
	private Expression arithmeticExpression()
	{
		EnterRule_arithmeticExpression();
		EnterRule("arithmeticExpression", 4);
		TraceIn("arithmeticExpression", 4);
		Expression expression = default(Expression);


		Expression e1 = default(Expression);
		string op = default(string);
		Expression e2 = default(Expression);

		try { DebugEnterRule(GrammarFileName, "arithmeticExpression");
		DebugLocation(70, 2);
		try
		{
			// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:71:3: (e1= unaryExpression (op= arithmeticOperator e2= unaryExpression )* )
			DebugEnterAlt(1);
			// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:71:5: e1= unaryExpression (op= arithmeticOperator e2= unaryExpression )*
			{
			DebugLocation(71, 7);
			PushFollow(Follow._unaryExpression_in_arithmeticExpression198);
			e1=unaryExpression();
			PopFollow();
			if (state.failed) return expression;
			DebugLocation(72, 3);
			if (state.backtracking == 0)
			{

							expression = e1;
						
			}
			DebugLocation(75, 5);
			// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:75:5: (op= arithmeticOperator e2= unaryExpression )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_1 = input.LA(1);

				if ((LA3_1==DIVIDE||(LA3_1>=MINUS && LA3_1<=MULT)||LA3_1==PLUS))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:75:7: op= arithmeticOperator e2= unaryExpression
					{
					DebugLocation(75, 9);
					PushFollow(Follow._arithmeticOperator_in_arithmeticExpression212);
					op=arithmeticOperator();
					PopFollow();
					if (state.failed) return expression;
					DebugLocation(75, 31);
					PushFollow(Follow._unaryExpression_in_arithmeticExpression216);
					e2=unaryExpression();
					PopFollow();
					if (state.failed) return expression;
					DebugLocation(76, 3);
					if (state.backtracking == 0)
					{

									 expression = ((Select)expression).add(op, (Select)e2);
								
					}

					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

		}
		 
			catch (RecognitionException e) 
			{ 
				throw e; 
			}

		finally
		{
			TraceOut("arithmeticExpression", 4);
			LeaveRule("arithmeticExpression", 4);
			LeaveRule_arithmeticExpression();
		}
		DebugLocation(80, 2);
		} finally { DebugExitRule(GrammarFileName, "arithmeticExpression"); }
		return expression;

	}
	// $ANTLR end "arithmeticExpression"

	partial void EnterRule_unaryExpression();
	partial void LeaveRule_unaryExpression();
	// $ANTLR start "unaryExpression"
	// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:82:1: unaryExpression returns [Expression expression] : ( (op= unaryOperator e1= postfixExpression ) |e1= postfixExpression );
	[GrammarRule("unaryExpression")]
	private Expression unaryExpression()
	{
		EnterRule_unaryExpression();
		EnterRule("unaryExpression", 5);
		TraceIn("unaryExpression", 5);
		Expression expression = default(Expression);


		string op = default(string);
		Expression e1 = default(Expression);

		try { DebugEnterRule(GrammarFileName, "unaryExpression");
		DebugLocation(82, 2);
		try
		{
			// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:83:3: ( (op= unaryOperator e1= postfixExpression ) |e1= postfixExpression )
			int alt4=2;
			try { DebugEnterDecision(4, false);
			int LA4_1 = input.LA(1);

			if ((LA4_1==MINUS||LA4_1==38))
			{
				alt4 = 1;
			}
			else if ((LA4_1==NAME||LA4_1==NUMBER||LA4_1==STRING))
			{
				alt4 = 2;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return expression;}
				NoViableAltException nvae = new NoViableAltException("", 4, 0, input, 1);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:83:5: (op= unaryOperator e1= postfixExpression )
				{
				DebugLocation(83, 5);
				// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:83:5: (op= unaryOperator e1= postfixExpression )
				DebugEnterAlt(1);
				// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:83:7: op= unaryOperator e1= postfixExpression
				{
				DebugLocation(83, 9);
				PushFollow(Follow._unaryOperator_in_unaryExpression245);
				op=unaryOperator();
				PopFollow();
				if (state.failed) return expression;
				DebugLocation(83, 26);
				PushFollow(Follow._postfixExpression_in_unaryExpression249);
				e1=postfixExpression();
				PopFollow();
				if (state.failed) return expression;

				}

				DebugLocation(84, 3);
				if (state.backtracking == 0)
				{

								expression = ((Select)e1).selectList[0] = new UnaryExpression(op, ((Select)e1).selectList[0]);
							
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:87:5: e1= postfixExpression
				{
				DebugLocation(87, 7);
				PushFollow(Follow._postfixExpression_in_unaryExpression263);
				e1=postfixExpression();
				PopFollow();
				if (state.failed) return expression;
				DebugLocation(88, 3);
				if (state.backtracking == 0)
				{

								expression = e1;
							
				}

				}
				break;

			}
		}
		 
			catch (RecognitionException e) 
			{ 
				throw e; 
			}

		finally
		{
			TraceOut("unaryExpression", 5);
			LeaveRule("unaryExpression", 5);
			LeaveRule_unaryExpression();
		}
		DebugLocation(91, 2);
		} finally { DebugExitRule(GrammarFileName, "unaryExpression"); }
		return expression;

	}
	// $ANTLR end "unaryExpression"

	partial void EnterRule_postfixExpression();
	partial void LeaveRule_postfixExpression();
	// $ANTLR start "postfixExpression"
	// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:93:1: postfixExpression returns [Expression expression] : ( ( STRING | NUMBER )=>l= literal |n= NAME ( ( DOT )=> DOT n= NAME | ( RARROW NAME LPAREN NAME ( COMMA NAME )* BAR )=> RARROW f= NAME LPAREN bl= bindingList[context] BAR ap= actualParameterList RPAREN | RARROW f= NAME LPAREN ap= actualParameterList RPAREN )* );
	[GrammarRule("postfixExpression")]
	private Expression postfixExpression()
	{
		EnterRule_postfixExpression();
		EnterRule("postfixExpression", 6);
		TraceIn("postfixExpression", 6);
		Expression expression = default(Expression);


		CommonToken n = default(CommonToken);
		CommonToken f = default(CommonToken);
		Select l = default(Select);
		List<TableBinding> bl = default(List<TableBinding>);
		List<Expression> ap = default(List<Expression>);

		string context = null;
		try { DebugEnterRule(GrammarFileName, "postfixExpression");
		DebugLocation(93, 2);
		try
		{
			// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:94:3: ( ( STRING | NUMBER )=>l= literal |n= NAME ( ( DOT )=> DOT n= NAME | ( RARROW NAME LPAREN NAME ( COMMA NAME )* BAR )=> RARROW f= NAME LPAREN bl= bindingList[context] BAR ap= actualParameterList RPAREN | RARROW f= NAME LPAREN ap= actualParameterList RPAREN )* )
			int alt6=2;
			try { DebugEnterDecision(6, false);
			int LA6_1 = input.LA(1);

			if ((LA6_1==STRING) && (EvaluatePredicate(synpred1_OCLConstraint_fragment)))
			{
				alt6 = 1;
			}
			else if ((LA6_1==NUMBER) && (EvaluatePredicate(synpred1_OCLConstraint_fragment)))
			{
				alt6 = 1;
			}
			else if ((LA6_1==NAME))
			{
				alt6 = 2;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return expression;}
				NoViableAltException nvae = new NoViableAltException("", 6, 0, input, 1);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(6); }
			switch (alt6)
			{
			case 1:
				DebugEnterAlt(1);
				// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:94:5: ( STRING | NUMBER )=>l= literal
				{
				DebugLocation(94, 27);
				PushFollow(Follow._literal_in_postfixExpression300);
				l=literal();
				PopFollow();
				if (state.failed) return expression;
				DebugLocation(95, 3);
				if (state.backtracking == 0)
				{

								expression = l;
							
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:98:5: n= NAME ( ( DOT )=> DOT n= NAME | ( RARROW NAME LPAREN NAME ( COMMA NAME )* BAR )=> RARROW f= NAME LPAREN bl= bindingList[context] BAR ap= actualParameterList RPAREN | RARROW f= NAME LPAREN ap= actualParameterList RPAREN )*
				{
				DebugLocation(98, 6);
				n=(CommonToken)Match(input,NAME,Follow._NAME_in_postfixExpression312); if (state.failed) return expression;
				DebugLocation(99, 3);
				if (state.backtracking == 0)
				{

								TableBinding tableBinding = tryToGetBinding(n.Text);
								if (tableBinding == null)
								{
									context = n.Text;
								}
								else
								{
									context = tableBinding.tableName;
								}

								expression = new Select(context, tableBinding);
							
				}
				DebugLocation(112, 2);
				// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:112:2: ( ( DOT )=> DOT n= NAME | ( RARROW NAME LPAREN NAME ( COMMA NAME )* BAR )=> RARROW f= NAME LPAREN bl= bindingList[context] BAR ap= actualParameterList RPAREN | RARROW f= NAME LPAREN ap= actualParameterList RPAREN )*
				try { DebugEnterSubRule(5);
				while (true)
				{
					int alt5=4;
					try { DebugEnterDecision(5, false);
					try
					{
						alt5 = dfa5.Predict(input);
					}
					catch (NoViableAltException nvae)
					{
						DebugRecognitionException(nvae);
						throw;
					}
					} finally { DebugExitDecision(5); }
					switch ( alt5 )
					{
					case 1:
						DebugEnterAlt(1);
						// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:112:4: ( DOT )=> DOT n= NAME
						{
						DebugLocation(112, 13);
						Match(input,DOT,Follow._DOT_in_postfixExpression327); if (state.failed) return expression;
						DebugLocation(112, 18);
						n=(CommonToken)Match(input,NAME,Follow._NAME_in_postfixExpression331); if (state.failed) return expression;
						DebugLocation(113, 4);
						if (state.backtracking == 0)
						{

											List<NavigationItem> navigationItems = ddlPackage.getNavigation(context, n.Text);

											if (navigationItems == null) //is a column
											{
												ColumnExpression columnExpression = new ColumnExpression(n.Text);
												((Select)expression).selectList.Add(columnExpression);
											}
											else //add data for join(s)
											{
												((Select)expression).from.AddRange(navigationItems);
												context = navigationItems[navigationItems.Count-1].targetTable;
											}
										
						}

						}
						break;
					case 2:
						DebugEnterAlt(2);
						// Z:\\EA_Addin_Model_Validator\\OCLtoSQLTranslator\\OCLConstraint.g:128:5: ( RARROW NAME LPAREN NAME ( COMMA NAME )* BAR )=> RARROW f= NAME LPAREN bl= bindingList[context] BAR ap= actualParameterList RPAREN
						{
						DebugLocation(129, 5);
						Match(input,RARROW,Follow._RARROW_in_postfixExpression369); if (state.failed) return expression;
						DebugLocation(129, 13);
						f=(CommonToken)Match(input,NAME,Follow._NAME_in_postfixExpression373); if (state.failed) return expression;
						DebugLocation(129, 19);
						Match(input,LPAREN,Follow._LPAREN_in_postfixExpression375); if (state.failed) return expression;
						DebugLocation(129, 28);
						PushFollow(Follow._bindingList_in_postfixExpression379);
						bl=bindingList(context);
						PopFollow();
						if (state.failed) return expression;
						DebugLocation(129, 50);
						Match(input,BAR,Follow._BAR_in_postfixExpression382); if (state.failed) return expression;
						DebugLocation(129, 56);
						PushFollow(Follow._actualParameterList_in_postfixExpression386);
						ap=actualParameterList();
						PopFollow();
						if (state.failed) return expression;
						DebugLocation(129, 77);
						Match(input,RPAREN,Follow._RPAREN_in_postfixExpression388); if (state.failed) return expression;
						DebugLocation(130, 4);
						if (state.backtracking == 0)
						{

											expression = advancedFunctionCall((Select)expression, f.Text, bl, ap);
											unregisterBindings(bl);
										
						}

						}
						break;
					case 3:
